# EasyGUI

./: CMakeLists.txt  Changelog.md  License.md  README.md  TODO.md  embold.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: Build.yml  Linux.yml  Windows.yml  ci.yml  deploy.yml
cmake/: BuildLibrary.cmake  BuildTest.cmake  EasyGUIConfig.cmake  FindSFML.cmake
docs/: doxyfile.txt
example/: CMakeLists.txt  demo.cpp  menus.hpp  routines.hpp
example/menus/: buttons.hpp  mainMenu.cpp  secondMenu.cpp
example/menus/buttons/: backButton.cpp  demoButton.cpp  exitButton.cpp
example/routines/: backButton.cpp  demoButton.cpp  exitButton.cpp  windowHandler.cpp
include/: Application.hpp  Component.hpp  FontManager.hpp  Menu.hpp  Routine.hpp
include/Assets/: Button.hpp  Label.hpp
include/EasyGUI/: Application.hpp  FontManager.hpp  Label.hpp  Menu.hpp  Point.hpp
include/EasyGUI/Exceptions/: AssetException.hpp
scripts/: build.bat  build.sh  run_tests.sh
src/: CMakeLists.txt
src/Application/: CMakeLists.txt
src/Application/inc/: Application.hpp  Application.hpp.in  Menu.hpp  Menu.hpp.in  Routine.hpp  Routine.hpp.in
src/Application/inc/Exceptions/: ApplicationException.hpp  ApplicationException.hpp.in  MenuException.hpp  MenuException.hpp.in
src/Application/src/: Application.cpp  Menu.cpp  Routine.cpp
src/Assets/: CMakeLists.txt
src/Assets/Label/inc/: Label.hpp  Point.hpp
src/Assets/Label/src/: Label.cpp
src/Assets/inc/: AlignmentTool.hpp  AlignmentTool.hpp.in  Button.hpp  Button.hpp.in  CheckBox.hpp  CheckBox.hpp.in  Component.hpp  Component.hpp.in  Converter.hpp  Converter.hpp.in  FontManager.hpp  Image.hpp  Image.hpp.in  Label.hpp  Label.hpp.in  Manager.hpp  Manager.hpp.in  PasswordBox.hpp  PasswordBox.hpp.in  Point.hpp  Point.hpp.in  Separator.hpp  Separator.hpp.in  Task.hpp  Task.hpp.in  TextBox.hpp.in  Textbox.hpp
src/Assets/inc/Exceptions/: AssetException.hpp  AssetException.hpp.in  ButtonException.hpp  ButtonException.hpp.in  CheckBoxException.hpp  CheckBoxException.hpp.in  ImageException.hpp  ImageException.hpp.in  LabelException.hpp  LabelException.hpp.in  ManagerException.hpp  ManagerException.hpp.in  TextBoxException.hpp  TextBoxException.hpp.in
src/Assets/src/: AlignmentTool.cpp  AllignmentTool.cpp  Button.cpp  CheckBox.cpp  Component.cpp  Converter.cpp  FontManager.cpp  Image.cpp  Label.cpp  PasswordBox.cpp  Point.cpp  Separator.cpp  TextBox.cpp
src/CLI/: CMakeLists.txt
src/CLI/inc/: generators.hpp  parser.hpp
src/CLI/src/: fileGenerators.cpp  generators.cpp  main.cpp  parser.cpp
src/Logger/: CMakeLists.txt
src/Logger/inc/: Logger.hpp
src/Logger/inc/Exceptions/: AllignmentException.hpp  ApplicationException.hpp  AssetException.hpp  ButtonException.hpp  CheckBoxException.hpp  FontException.hpp  ImageException.hpp  LabelException.hpp  ManagerException.hpp  MenuException.hpp  TextBoxException.hpp  TextureException.hpp
src/Logger/src/: ApplicationException.cpp  AssetException.cpp  AssetException.hpp
src/inc/: EasyGUI.hpp  Interface.hpp
test/: CMakeLists.txt
test/system/: CMakeLists.txt
test/unit/: AlignmentToolTest.cpp  CMakeLists.txt  LabelTest.cpp
tests/: CMakeLists.txt
tests/FontManager/: CMakeLists.txt  T_FontManager_UT.cpp  main.cpp
tests/Label/: CMakeLists.txt  T_Label_UT.cpp  T_Point_UT.cpp  main.cpp
